Implements actual ForceFeedback support.
Basically uses the same algorithms from the 'ttr' console application,
with adaptations for output (log instead of printf), the approach to
obtain an HWND handle, some accessory methods and an initial poller
logic.

Currently:
- plays a "start engine" effect sequence when turning on the engine
  (still too long and out of sync with the rev display and truck sound)
- plays a "kill engine" effect sequence when turning off the engine
  (also too long and does not follow the sfx as well)
- uses two ramp curves from low rpm to idle, and from idle to max rpm
- it tries to save queries to the device by estimating when a new force
  value is relevant

--- a/ForceRumbleback/ForceRumbleback.vcxproj
+++ b/ForceRumbleback/ForceRumbleback.vcxproj
@@ -83,6 +83,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>dinput8.lib;dxguid.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -102,6 +103,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>dinput8.lib;dxguid.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -118,6 +120,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>dinput8.lib;dxguid.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -137,6 +140,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>dinput8.lib;dxguid.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -144,6 +148,7 @@
     <ClInclude Include="log.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="poller.h" />
+    <ClInclude Include="rumble.h" />
     <ClInclude Include="scsutil.h" />
     <ClInclude Include="truck.h" />
   </ItemGroup>
@@ -157,6 +162,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="poller.cpp" />
+    <ClCompile Include="rumble.cpp" />
     <ClCompile Include="scsutil.cpp" />
     <ClCompile Include="truck.cpp" />
   </ItemGroup>
