Adds fx.h/cpp for ForceFeedback effects.
Moves the existing effects from poller and rumble code into the fx
files, sets common used macro in .h file, creates fx:: namespace, and
renames effects calls to resemble global resources (upper camel case).

--- a/ForceRumbleback/ForceRumbleback.vcxproj.filters
+++ b/ForceRumbleback/ForceRumbleback.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="rumble.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="fx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rumble.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="fx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
